NPOTDB Fix bug 340995 - complexType without complexContent fails validation.  Patch be sspeiche, r=aaronr,me